deploy/callback-ingress/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: c11-dns-ingress
spec:
  type: ClusterIP
  selector: {app.kubernetes.io/name: c11-dns-ingress}
  ports:
    - {name: dns-udp, port: 53, targetPort: dns-udp, protocol: UDP}
    - {name: dns-tcp, port: 53, targetPort: dns-tcp, protocol: TCP}
---
apiVersion: v1
kind: Service
metadata:
  name: c11-https-ingress
spec:
  type: ClusterIP
  selector: {app.kubernetes.io/name: c11-https-ingress}
  ports:
    - {name: https, port: 443, targetPort: https, protocol: TCP}
---
apiVersion: v1
kind: Service
metadata:
  name: c11-smtp-ingress
spec:
  type: ClusterIP
  selector: {app.kubernetes.io/name: c11-smtp-ingress}
  ports:
    - {name: smtp, port: 25, targetPort: smtp, protocol: TCP}
